# finopsmind-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 001_initial_schema.sql  002_chat_messages.sql
src/: cache.rs  carbon.rs  config.rs  crypto.rs  errors.rs  llm.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
src/db/: anomalies.rs  budgets.rs  chat_messages.rs  cloud_providers.rs  costs.rs  forecasts.rs  mod.rs  organizations.rs  policies.rs  recommendations.rs  remediations.rs  users.rs
src/handlers/: allocations.rs  anomalies.rs  auth.rs  budgets.rs  chat.rs  cloud_providers.rs  costs.rs  forecasts.rs  health.rs  mod.rs  policies.rs  recommendations.rs  remediations.rs  reports.rs  settings.rs  websocket.rs
src/jobs/: mod.rs  recommendations.rs
src/ml/: anomaly.rs  forecast.rs  mod.rs
src/models/: anomaly.rs  budget.rs  chat_message.rs  cloud_provider.rs  cost.rs  forecast.rs  mod.rs  organization.rs  policy.rs  recommendation.rs  remediation.rs  types.rs  user.rs
src/rules/: idle_ec2.rs  idle_eip.rs  idle_elb.rs  missing_ri.rs  mod.rs  old_snapshots.rs  oversized_rds.rs  s3_lifecycle.rs  serverless_migration.rs  unattached_ebs.rs
src/ws/: hub.rs  mod.rs
