[package]
name = "finopsmind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finopsmind"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
sha2 = "0.10"
hex = "0.4"

# HTTP client for LLM calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ML
linfa = "0.7"
linfa-trees = "0.7"
ndarray = "0.16"

# Time-series forecasting
augurs = { version = "0.7", features = ["ets", "mstl"] }

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures = "0.3"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

# Config
config = "0.14"
